--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,7 @@ nav {
     top: 0;
     left: 0;
     z-index: 2;
+    margin-bottom: 30px;
 }
 
 .header__title {
@@ -33,28 +34,54 @@ nav {
     list-style-type: none;
 }
 
+.content {
+    padding: 30px;
+}
 
 .section__introduction {
     min-height: 100vh;
-    background-color: hsl(34, 100%, 50%);
+    background-color: #1c1c1b;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #c4c3c2;
+    padding-top: 20px;
 }
 
 .introduction__info {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+}
+
+.introduction__info > h1 {
+    font-size: 60px;
+}
+
+.introduction__info > h3 {
+    font-size: 30px;
+}
+
+.introduction__info > h5 {
+    font-size: 20px;
+    width: 75%;
+    text-align: center;
 }
 
 .section__projects {
-    min-height: 100vh;
-    background-color: hsl(100, 100%, 50%);
+    background-color: white;
+    height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    
+}
+
+.section__projects > h2 {
+    font-size: 50px;
+    justify-content: center;
+    padding: 40px 0;
 }
 
 .section__achievements {
@@ -66,6 +93,32 @@ nav {
     color: #c4c3c2;
 }
 
+.projects {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 .project__card {
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 5px;
+    padding: 10px 20px;
+    border: 1px solid lightgray;
+    background-color: #c4c3c2;
+    transition: transform 0.3s;
 }
+
+.project__card > img {
+    width: 300px;
+    object-fit: contain;
+    border: solid black 1px;
+}
+
+.project__card:hover {
+    transform: translateY(-1.5rem) scale(1.03);
+    cursor: pointer;
+  }
