--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,10 @@ nav {
     list-style-type: none;
 }
 
+.type {
+    font-size: 40px;
+}
+
 .content {
     padding: 30px;
 }
@@ -71,7 +75,7 @@ nav {
 
 .section__projects {
     background-color: white;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -114,11 +118,73 @@ nav {
 
 .project__card > img {
     width: 300px;
-    object-fit: contain;
-    border: solid black 1px;
+    height: 170px;
+    object-fit: cover;
+    margin-bottom: 30px;    
 }
 
 .project__card:hover {
     transform: translateY(-1.5rem) scale(1.03);
     cursor: pointer;
   }
+
+
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 3; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100vw; /* Full width */
+    height: 100vh; /* Full height */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    align-items: center;
+    justify-content: center;
+  }
+
+  /* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    overflow: auto; /* Enable scroll if needed */
+    box-shadow: 0 11px 21px 3px rgba(18,30,255,.09);
+
+    height: 50%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+.modal__topbar {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    border-bottom: 1px solid lightgray;
+
+}
+
+  .modal-content > .content {
+      display: flex;
+      align-items: center;
+  }
+
+.modal-content > .content > img {
+    width: 45%;
+    object-fit: contain;
+    margin-right: 40px;
+}
+
+.content__buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.content__buttons > a {
+    margin-right: 10px;
+}
+
+.star__light::after {
+    color: white;
+    border-top: white;
+}
